# algorithms_and_data_structures

./: .gitignore  README.md
algorithms/huffman/: CMakeLists.txt  README.md  huffman  huffman.cpp  huffman.hpp  main.cpp
algorithms/huffman/smoke_test/: compressed
collections/abstract/: collection.hpp  element_accessible.hpp  enumerable.hpp  iterable.hpp  iterator.hpp  modifiable.hpp  object.hpp  reservable.hpp  resizable.hpp
collections/ctl/: list.hpp  vector.hpp
collections/tools/: profiler.cpp  profiler.hpp
containers/: CMakeLists.txt
containers/abstract/: iterable.hpp
containers/bignum/: README.md  bignum.hpp  smoke_test  smoke_test.cpp
containers/ctl/: docs.hpp  list.hpp  vector.hpp
containers/ctl/abstract/: abstracts.hpp  collection.hpp  iterable.hpp  reservable.hpp  sequence.hpp
containers/ctl/abstract/capacity/: reservable.hpp  size_accessible.hpp
containers/ctl/abstract/collection/: bidirectional_access_collection.hpp  random_access_collection.hpp
containers/ctl/abstract/comparable/: equatable.hpp
containers/ctl/abstract/element_accessible/: random_element_accessible.hpp
containers/ctl/abstract/iterable/: iterable.hpp
containers/ctl/abstract/modifiable/: element_accessible_modifiable.hpp  no_element_accessible_modifiable.hpp  resizable.hpp
containers/ctl/abstract/sequence/: bidirectional_access_sequence.hpp  random_access_sequence.hpp
containers/ctl/data_structures/: list.hpp  vector.hpp
containers/ctl/interface/: collection.hpp  interfaces.hpp
containers/ctl/interface/base/: object.hpp
containers/ctl/interface/capacity/: capacity_accessible.hpp  reservable.hpp  size_accessible.hpp
containers/ctl/interface/comparable/: comparable.hpp
containers/ctl/interface/element_accessible/: bidirectional_element_accessible.hpp  data_accessible.hpp  random_element_accessible.hpp  top_element_accessible.hpp
containers/ctl/interface/iterable/: iterable.hpp
containers/ctl/interface/meta/: class_meta.hpp  iterator_meta.hpp
containers/ctl/interface/modifiable/: bidirectional_element_accessible_modifiable.hpp  element_accessible_modifiable.hpp  modifiable.hpp  no_element_accessible_modifiable.hpp  random_element_accessible_modifiable.hpp  reservable.hpp  resizable.hpp  top_element_accessible_modifiable.hpp
containers/tests/: CMakeLists.txt  Test Results - ctl vector<int>.html  Test Results.html  contructor_tests.cpp
containers/tests/ctl/abstract/: collection.hpp
containers/tests/ctl/data_structures/: vector.hpp
containers/tests/ctl/interface/: meta.hpp
containers/tests/ctl/interface/base/: object.hpp
containers/tests/ctl/interface/modifiable/: bidirectional_element_accessible_modifiable.hpp  element_accessible_modifiable.hpp  modifiable.hpp  resizable.hpp
containers/tests/extra/: extra_functions.hpp  extra_std_functions.hpp  generator.hpp  profiler.hpp  stl_containers_output.cpp
containers/tests/list_tests/: constructor_tests.cpp  methods_test.cpp
containers/tests/vector_tests/: contructor_tests.cpp  extra_functions.hpp  methods_test.cpp
containers/thread_pool/: CMakeLists.txt  README.md  smoke_test  smoke_test.cpp  thread_pool.hpp
containers/tools/: stl_containers_output.hpp
containers/variant/: CMakeLists.txt  README.md  main.cpp  variant.hpp
containers/whatever/: CMakeLists.txt  README.md  smoke_test  whatever.hpp
design_patterns/behavioral/chain-of-responsibility/c++/: chain_of_responsibility.cpp
design_patterns/behavioral/command/c++/: command.cpp
design_patterns/behavioral/interpreter/c++/: interpreter.cpp
design_patterns/behavioral/iterator/c++/: iterator.cpp
design_patterns/behavioral/mediator/c++/: mediator.cpp
design_patterns/behavioral/memento/c++/: memento.cpp
design_patterns/behavioral/observer/c++/: observer.cpp
design_patterns/behavioral/state/c++/: state.cpp
design_patterns/behavioral/strategy/c++/: strategy.cpp
(+17 files in other folders)
